--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 # Added directories & files
 SyntheticColon_I/
 bimodal_camera_pose/checkpoints/
+bimodal_camera_pose/trained_models/
 *.pdf
 *.o
 *.e
